js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib2/JsModuleC.6.kt
@file:JsModule("../js-module-c-new")

external fun externalDemoFunction(): Int
